// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio defaultChecked 1`] = `
<span
  class="zs-radio zs-radio--checked"
>
  <span
    class="zs-radio__widget"
  >
    <span
      class="zs-radio__inner"
    />
  </span>
  <span
    class="zs-radio__text"
  >
    选项一
  </span>
  <input
    checked=""
    class="zs-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio renders correctly 1`] = `
<span
  class="zs-radio"
>
  <span
    class="zs-radio__widget"
  >
    <span
      class="zs-radio__inner"
    />
  </span>
  <span
    class="zs-radio__text"
  >
    选项一
  </span>
  <input
    class="zs-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio type is button 1`] = `
<button
  class="zs-radio"
  type="button"
>
  选项一
  <input
    class="zs-radio__input"
    type="radio"
    value="0"
  />
</button>
`;

exports[`Radio type is cell 1`] = `
<div
  class="zs-cell zs-cell--link"
>
  <div
    class="zs-cell__inner"
  >
    <div
      class="zs-cell__header"
    />
    <div
      class="zs-cell__body"
    >
      <div
        class="zs-cell__content"
      >
        <span
          class="zs-radio"
        >
          <span
            class="zs-radio__widget"
          >
            <span
              class="zs-radio__inner"
            />
          </span>
          <span
            class="zs-radio__text"
          >
            选项一
          </span>
          <input
            class="zs-radio__input"
            type="radio"
            value="0"
          />
        </span>
      </div>
    </div>
    <div
      class="zs-cell__footer"
    />
  </div>
</div>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="zs-radio-group zs-radio-group--xs zs-radio-group--radius"
>
  <div
    class="zs-radio-group__inner"
  >
    <span
      class="zs-radio"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项一
      </span>
      <input
        class="zs-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="zs-radio zs-radio--checked"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="zs-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="zs-radio"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项三
      </span>
      <input
        class="zs-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="zs-radio-group zs-radio-group--xs zs-radio-group--radius"
>
  <div
    class="zs-radio-group__inner"
  >
    <span
      class="zs-radio"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项一
      </span>
      <input
        class="zs-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="zs-radio zs-radio--checked"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="zs-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="zs-radio"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项三
      </span>
      <input
        class="zs-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="zs-radio-group zs-radio-group--xs zs-radio-group--radius"
>
  <div
    class="zs-radio-group__inner"
  >
    <span
      class="zs-radio zs-radio--checked"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项一
      </span>
      <input
        checked=""
        class="zs-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="zs-radio"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项二
      </span>
      <input
        class="zs-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="zs-radio"
    >
      <span
        class="zs-radio__widget"
      >
        <span
          class="zs-radio__inner"
        />
      </span>
      <span
        class="zs-radio__text"
      >
        选项三
      </span>
      <input
        class="zs-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;
